package edu.mirea.qwerdsa53.taskTracker.domain.habit;

public enum FrequencyType {
	EVERY_DAY,
	TIMES_PER_WEEK,
	ON_SELECTED_WEEKDAYS
}
