package edu.mirea.qwerdsa53.taskTracker.domain.projection;

public record StreakView(Long habitId, int currentLength, int longest) {}
